<resources>
    <string name="app_name">TouristApp</string>
    <string name="city_tourist_app">Rio de Janeiro - Tourist</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="attraction_name">Attraction Name</string>
</resources>