<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AttractionDetail"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textAlignment="center"
        android:text="@string/city_tourist_app"
        android:textColor="#1E1C1C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textAlignment="center"
        android:text="@string/attraction_name"
        android:textColor="#1E1C1C"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imImage1"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="left"/>

        <ImageView
            android:id="@+id/imImage2"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Price"
        android:layout_marginTop="5dp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="572dp" />


    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/website" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/phone"
        android:textSize="15sp"
        android:textStyle="bold"/>
<!--        tools:layout_editor_absoluteX="31dp"-->
<!--        tools:layout_editor_absoluteY="537dp" />-->
    <!--        android:layout_width="387dp"-->
    <!--        android:layout_height="99dp"-->
    <RatingBar
        android:id="@+id/rbAttraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="0.5"/>

<!--    android:stepSize="1"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_marginLeft="45dp"
            android:layout_gravity="center"
            android:onClick="btnGoBack"
            android:text="Go Back" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:layout_marginLeft="60dp"
            android:onClick="logoutPressed"
            android:text="@string/logout"/>

    </LinearLayout>
</LinearLayout>